# nox-product-poc

cVault/backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
cVault/backend/src/: abi.rs  config.rs  db.rs  gateway.rs  main.rs  metrics.rs  processor.rs  server.rs  state.rs  types.rs  watcher.rs
cVault/backend/src/routes/: mod.rs  vault.rs
cVault/contracts/: .env.example  README.md  hardhat.config.ts  package-lock.json  package.json
cVault/contracts/scripts/: approvePendingDeposits.ts  claimDeposit.ts  claimRedeem.ts  deployVault.ts  requestDeposit.ts  requestRedeem.ts  vaultLifecycle.ts
cVault/contracts/test/: ConfidentialERC7540.fork.ts  ConfidentialERC7540Factory.ts
cVault/front/: next.config.ts  package-lock.json  package.json
demo-ctoken/: .env.local.example  .gitignore  README.md  package-lock.json  package.json
demo-ctoken/app/: globals.css  layout.tsx
demo-ctoken/app/(landing)/: page.tsx
demo-ctoken/components/: providers.tsx
demo-ctoken/components/dashboard/: public-assets.tsx
demo-ctoken/components/delegated-view/: delegated-view-content.tsx  delegated-view-table.tsx
demo-ctoken/components/explorer/: activity-table.tsx  explorer-content.tsx
demo-ctoken/components/layout/: dashboard-header.tsx  (+1 more)
demo-ctoken/docs/: changelog.md
demo-ctoken/hooks/: use-activity-history.ts  use-add-viewer.ts  use-confidential-transfer.ts  use-delegated-view.ts  use-unwrap.ts  use-wrap.ts
demo-ctoken/lib/: activity.ts  confidential-token-abi.ts  config.ts  contracts.ts  gas.ts  subgraph.ts  wagmi.ts
demo-ctoken/public/: llms.txt
(+73 files in other folders)
