[package]
name    = "confidential-vault-settler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "settler"
path = "src/main.rs"

[dependencies]
alloy              = { version = "1",   features = ["full"] }
anyhow             = "1"
axum               = { version = "0.8", features = ["macros"] }
chrono = "0.4.44"
config             = "0.15"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde              = { version = "1",   features = ["derive"] }
serde_json         = "1"
aes-gcm            = "0.10"
base64             = "0.22"
hkdf               = "0.12"
rand               = "0.8"
reqwest            = { version = "0.13", features = ["json"] }
rsa                = "0.9"
sha2               = "0.10"
sqlx               = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tokio              = { version = "1",   features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower-http         = { version = "0.6", features = ["cors", "trace"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }

[dev-dependencies]
tokio-test = "0.4"
